testsuite/tests/modifiers/should_fail/ModifiersNoExt.hs
module ModifiersNoExt where

%()
data D
